--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MinStrom</string>
+    <string name="this_is_a_message">This is a message</string>
 </resources>
